# portforge

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: port-check-bug.yml
.github/workflows/: ci.yml
docs/: diagnostics-json-contract.md  diagnostics-permissions.md  diagnostics-sharing-safety.md  port-check-troubleshooting.md
portforge/: __init__.py  cli.py  diagnostics.py  formatters.py  hints.py  lsof_parser.py  models.py  presets.py
portlane/: __init__.py  checker.py  cli.py  formatters.py
portpilot/: __init__.py  cli.py  formatters.py
tests/: test_cli.py  test_diagnostics.py  test_diagnostics_docs.py  test_diagnostics_json_contract.py  test_diagnostics_minimum_bundle_doc.py  test_formatters.py  test_issue_template_contract.py  test_parser.py  test_presets.py
