[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "port-pilot"
version = "0.1.0"
description = "Find and free busy development ports in seconds."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Asim Awdah"}]
keywords = ["ports", "developer-tools", "cli", "process", "debugging", "localhost"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
portpilot = "portpilot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["portpilot*"]
