[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portforge"
version = "0.1.0"
description = "Find and free busy development ports in seconds."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Asim Awdah"}]
keywords = ["ports", "developer-tools", "cli", "process", "debugging", "localhost"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/asimawdah/portpilot"
Repository = "https://github.com/asimawdah/portpilot"
Issues = "https://github.com/asimawdah/portpilot/issues"

[project.scripts]
portforge = "portlane.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["portlane*"]
